End of section 11

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "dowmgnv7w",
+    "ApiKey": "655158232728166",
+    "ApiSecret": "kLcNvyWYgufRob74n-4y9-Jsq4Y"
+  }
 }
